# ChangeLog for dev-tcltk/expect-lite
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/expect-lite/ChangeLog,v 1.20 2012/11/04 06:31:02 vapier Exp $

  04 Nov 2012; Mike Frysinger <vapier@gentoo.org> expect-lite-4.3.2.ebuild:
  Stabilize for all #441302 by Paweł Hajdan, Jr.

*expect-lite-4.3.2 (16 Aug 2012)

  16 Aug 2012; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.3.2.ebuild:
  Version bump.

  03 Aug 2012; Mike Frysinger <vapier@gentoo.org> expect-lite-4.3.1.ebuild:
  Stabilize for all #429048 by Paweł Hajdan, Jr..

*expect-lite-4.3.1 (27 Jun 2012)

  27 Jun 2012; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.3.1.ebuild:
  Version bump.

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  expect-lite-4.3.0.ebuild:
  x86 stable wrt bug #418929

  03 Jun 2012; Agostino Sarubbo <ago@gentoo.org> expect-lite-4.3.0.ebuild:
  Stable for amd64, wrt bug #418929

*expect-lite-4.3.0 (25 Apr 2012)

  25 Apr 2012; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.3.0.ebuild:
  Version bump.

*expect-lite-4.2.2 (17 Feb 2012)

  17 Feb 2012; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.2.2.ebuild:
  Version bump.

*expect-lite-4.2.1 (18 Dec 2011)

  18 Dec 2011; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.2.1.ebuild:
  Version bump.

*expect-lite-4.2.0 (11 Oct 2011)

  11 Oct 2011; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.2.0.ebuild:
  Version bump.

*expect-lite-4.1.2 (24 Aug 2011)

  24 Aug 2011; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.1.2.ebuild:
  Version bump.

*expect-lite-4.1.0 (18 May 2011)

  18 May 2011; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.1.0.ebuild:
  Version bump.

  12 May 2011; Mike Frysinger <vapier@gentoo.org> expect-lite-4.0.3.ebuild:
  Stabilize for all.

*expect-lite-4.0.3 (23 Feb 2011)

  23 Feb 2011; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.0.3.ebuild:
  Version bump.

*expect-lite-4.0.2 (21 Dec 2010)
