@@ -1,0 +1,10 @@
+DEFINED_PHASES=install
+DESCRIPTION=quick and easy command line automation tool built on top of expect
+HOMEPAGE=http://expect-lite.sourceforge.net/
+IUSE=debug examples
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD
+RDEPEND=dev-tcltk/expect debug? ( dev-tcltk/tclx )
+SLOT=0
+SRC_URI=mirror://sourceforge/expect-lite/expect-lite_4.3.3.tar.gz
+_md5_=8b48bd1ed8617f2663f7241fe041d539
