@@ -1,6 +1,11 @@
 # ChangeLog for dev-tcltk/expect-lite
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/expect-lite/ChangeLog,v 1.20 2012/11/04 06:31:02 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/expect-lite/ChangeLog,v 1.21 2012/12/10 03:34:35 vapier Exp $
+
+*expect-lite-4.3.3 (10 Dec 2012)
+
+  10 Dec 2012; Mike Frysinger <vapier@gentoo.org> +expect-lite-4.3.3.ebuild:
+  Version bump.
 
   04 Nov 2012; Mike Frysinger <vapier@gentoo.org> expect-lite-4.3.2.ebuild:
   Stabilize for all #441302 by Paweł Hajdan, Jr.
